# advent-of-code-2021

./: Cargo.toml  README.md
src/: day10_syntax_scoring.rs  day11_dumbo_octopus.rs  day12_passage_pathing.rs  day13_transparent_origami.rs  day14_polymerization.rs  day15_chiton.rs  day16_packet_decoder.rs  day17_trick_shot.rs  day18_snailfish.rs  day19_beacon_scanner.rs  day1_sonar_sweep.rs  day20_trench_map.rs  day21_dirac_dice.rs  day22_reactor_reboot.rs  day23_amphipod.rs  day24_arithmetic_logic_unit.rs  day25_sea_cucumber.rs  day2_dive.rs  day3_binary_diagnostic.rs  day4_bingo.rs  day5_hydrothermal_lines.rs  day6_lanternfish.rs  day7_crabs.rs  day8_seven_segment_search.rs  day9_low_points.rs  main.rs
