[package]
name = "advent-of-code-2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { git = "https://github.com/rudyhb/utils.git" }
phf = { version = "0.10", features = ["macros"] }
regex = "1.5.4"
lazy_static = "1.4.0"
rayon = "1.5.1"
